# avaturkey-async

./: .gitignore  CMakeLists.txt  README.md  client.py  const.py  inventory.py  protocol.py  server.py  update.py  xml_parser.py
.github/workflows/: release.yml
box/: esyalar.json
config_all_ru/avatarAppearance/: appearance.xml
config_all_ru/inventory/: bathroom.xml  boyClothes.xml  boyClothes.xml1  clanFurniture.xml  decor.xml  furniture.xml  game.xml  girlClothes.xml  girlClothes.xml1  kitchen.xml  roomLayout.xml  stickerPack.xml
config_all_ru/location/: work.xml
config_all_ru/map/: photo_salon_1_map.xml
config_all_ru/modules/: clan.xml  trophies.xml
config_all_ru/modules/events/: stories01.xml
config_all_ru/pets/: petColors.xml  pets.xml
config_all_ru/translation/: bathroom_tr.xml  clan_tr.xml  clothes_tr.xml  decor_tr.xml  dictionary_tr.xml  furniture_tr.xml  game_tr.xml  help_tr.xml  quest_tr.xml  room_layout_tr.xml  trophies_tr.xml
include/: buf.h  client.h  common.h  const.h  module.h  protocol.h  redis_ctx.h  server.h  value.h
modules/: avatar.py  base_module.py  billing.py  chat_decor.py  clan.py  clan_location.py  client_error.py  competition.py  component.py  event.py  firstApril2020.py  furniture.py  house.py  inventory.py  location.py  location_game.py  mobile.py  mod_client_error.c  mod_confirm.c  mod_stub.c  outside.py  passport.py  relations.py  room.py  support.py  user_rating.py  work.py
src/: buf.c  client.c  common.c  const.c  main.c  module.c  protocol.c  redis_ctx.c  server.c  value.c
utils/: bot_common.py  repack_config.py
(+4 files in other folders)
